# acquire-python

./: .coverage.M3-Macbook.37567.XbVcFOqx  .gitignore  .gitmodules  .pre-commit-config.yaml  .tokeignore  CITATION.cff  Cargo.toml  MANIFEST.in  README.md  asv.conf.json  build.rs  drivers.json  pyproject.toml  tox.ini  wrapper.h
.github/: dependabot.yml
.github/workflows/: CI.yml  auto-merge.yml  automerge.yml  build.yml  leaky_runtime.yml  nightly-release.yml  nightly-tag.yml  pre-commit.yml  release.yml  test_pr.yml  test_pr_dcam.yml  test_pr_egrabber.yml  test_s3.yml  test_typing.yml
acquire/: CMakeLists.txt
acquire-libs/: CMakeLists.txt
acquire/cmake/: aq_require.cmake
python/acquire/: __init__.py  __init__.pyi  acquire.pyi  napari.yaml
python/calliphlox/: __init__.py  __init__.pyi  calliphlox.pyi  napari.yaml
src/: camera.rs  capabilities.rs  components.rs  core_properties.rs  device.rs  device_manager.rs  lib.rs  runtime.rs  signals.rs  stage_axis.rs  storage.rs
src/components/: channel.rs  direction.rs  macros.rs  mod.rs  property.rs  sample_type.rs  signal_io_kind.rs  signal_type.rs  timing.rs  trigger_edge.rs  trigger_event.rs
tests/: test_basic.py  test_dcam.py  test_docs.py  test_egrabber.py  test_leaky_runtime.py  test_pvcam.py  test_spinnaker.py  test_zarr.py
