[package]
name = "acquire-imaging"
authors = ["Nathan Clack <nclack@chanzuckerberg.com>"]
version = "0.3.0-rc1"
edition = "2021"

[lib]
name = "acquire"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = [
    "extension-module",
    "anyhow",
    "abi3-py38",
    "serde",
] }
pyo3-log = "0.9"
numpy = "0.20"
log = "0.4"
anyhow = "1.0"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
pythonize = "0.20.0"

[build-dependencies]
bindgen = "0.69.1"
cmake = "0.1"
http = "1.0"
json = "0.12"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip-extract = "0.1"
