[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "cpx-python"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies=["numpy>=1.16.0"]
dev-dependencies=["black","pytest>=7"]
dynamic = [
    "authors",
    "description",
    "license",
    "readme",
    "version"
]

[tool.black]
target-version = ['py38', 'py39', 'py310']
line-length = 79

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--tb=short -s"
# log_format = "%(asctime)s %(levelname)s %(message)s"
# log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli=true # when true, messages are printed immediately