[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "cpx-python"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["numpy>=1.20.0"]  #FIXME: (nclack) fails when no internet access?
dynamic = ["authors", "description", "license", "readme", "version"]

[project.optional-dependencies]
testing = ["black", "pytest>=7", "mypy", "tox", "pytest-cov"]

[project.entry-points."napari.manifest"]
cpx-python = "calliphlox:napari.yaml"

[tool.setuptools.package_data]
cpx-python = [
    "napari.yaml",
    "dcam_plugin.dll",
    "__init__.pyi",
    "calliphlox.pyi",
]

[tool.black]
target-version = ['py38', 'py39', 'py310']
line-length = 79

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--tb=short -s"
# log_format = "%(asctime)s %(levelname)s %(message)s"
# log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = true # when true, messages are printed immediately
