[build-system]
requires = ["setuptools", "maturin>=0.14"]
build-backend = "maturin"

[project]
name = "acquire-python"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["numpy>=1.22"] #FIXME: (nclack) fails when no internet access?
dynamic = ["authors", "description", "license", "readme", "version"]

[project.optional-dependencies]
testing = [
    "black",
    "pytest>=7",
    "mypy",
    "pytest-cov",
    "tifffile",
    "zarr",
    "dask",
    "ome-zarr",
]

[project.entry-points."napari.manifest"]
acquire-python = "acquire:napari.yaml"

[tool.setuptools.package_data]
acquire-python = [
    "napari.yaml",
    "libacquire-driver-common.so",
    "libacquire-driver-egrabber.so",
    "libacquire-driver-hdcam.so",
    "libacquire-driver-zarr.so",
    "acquire-driver-common.dll",
    "acquire-driver-egrabber.dll",
    "acquire-driver-hdcam.dll",
    "acquire-driver-zarr.dll",
    "__init__.pyi",
    "acquire.pyi",
]

[tool.black]
target-version = ['py39', 'py310', 'py311']
line-length = 79

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--tb=short -s"
# log_format = "%(asctime)s %(levelname)s %(message)s"
# log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = true # when true, messages are printed immediately
